data/test/type_check/fail/array_6.v
// Too few array subscript
wire x[3:0];
assign x = 1;
